ngx-loading implement

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,8 @@
   <ul>
     <li *ngFor="let number of numbers">{{number}}</li>
   </ul>
+  <br><br>
+  
+  <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }" [template]="customLoadingTemplate"></ngx-loading>
 </div>
 <router-outlet></router-outlet>
