ngx-spinner install

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align: center;">
 	<a href="#" routerLink="/ngx-loading">Ngx loading</a>
+	<a href="#" routerLink="/ngx-spinner">Ngx spinner</a>
 </div>
 <router-outlet></router-outlet>
