ngx-spinner setup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,16 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align: center;">
-	<a href="#" routerLink="/ngx-loading">Ngx loading</a>
-	<a href="#" routerLink="/ngx-spinner">Ngx spinner</a>
+	<a href="#" routerLink="/ngx-loading" style="padding: 10px;">Ngx loading</a>
+	<a href="#" routerLink="/ngx-spinner" style="padding: 10px;">Ngx spinner</a>
 </div>
+<!-- <ngx-spinner
+bdOpacity = 0.9
+bdColor = "#333"
+size = "medium"
+color = "#fff"
+type = "ball-clip-rotate"
+[fullScreen] = "false"
+>
+<p style="color: white" > Loading... </p>
+</ngx-spinner> -->
 <router-outlet></router-outlet>
