loader component generate

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <div style="text-align: center;">
 	<a href="#" routerLink="/ngx-loading" style="padding: 10px;">Ngx loading</a>
 	<a href="#" routerLink="/ngx-spinner" style="padding: 10px;">Ngx spinner</a>
+	<a href="#" routerLink="/custom" style="padding: 10px;">Custom</a>
 </div>
 <!-- <ngx-spinner
 bdOpacity = 0.9
